Better parsing algorithm using csv's

--- a/html/backend/comps.html
+++ b/html/backend/comps.html
@@ -69,7 +69,7 @@
                                                                         <v-text-field v-model="itemEdit.sheetId" label="Sheet ID" prepend-icon="mdi-table-cog"></v-text-field>
                                                                     </v-col>
                                                                     <v-col cols="12" md="4">
-                                                                        <v-text-field v-model="itemEdit.tabName" label="Tab name" prepend-icon="mdi-tab"></v-text-field>
+                                                                        <v-text-field v-model="itemEdit.gid" label="GID" prepend-icon="mdi-tab"></v-text-field>
                                                                     </v-col>
                                                                 </v-row>
                                                                 <v-row>
