Fix to comp-backend-editor

--- a/html/backend/comps.html
+++ b/html/backend/comps.html
@@ -190,7 +190,7 @@
                             challongeURL: "",
                             hitmapsStatsURL: "",
                             sheetId: "",
-                            tabName: "",
+                            gid: "",
                             updateWithSheet: false,
                             placements: [],
                             sortingIndex: 0
@@ -202,7 +202,7 @@
                             challongeURL: "",
                             hitmapsStatsURL: "",
                             sheetId: "",
-                            tabName: "",
+                            gid: "",
                             updateWithSheet: false,
                             placements: [],
                             sortingIndex: 0
