Footer now has a small margin and doesn't cover anything anymore

--- a/html/index.html
+++ b/html/index.html
@@ -65,9 +65,13 @@
                 </v-col>
                 <v-spacer></v-spacer>
             </v-row>
-            <v-footer absolute padless>
-                <span style="font-style: italic; text-align: center; width: 100%">Made with precision german engineering, calculated hungarian stats & accurate german timings.</span>
-            </v-footer>
+            <v-row>
+                <v-col md="12">
+                    <v-footer absolute padless>
+                        <span style="font-style: italic; text-align: center; width: 100%">Made with precision german engineering, calculated hungarian stats & accurate german timings.</span>
+                    </v-footer>
+                </v-col>
+            </v-row>
         </v-container>
       </v-main>
     </v-app>
