--- a/html/playerpage.html
+++ b/html/playerpage.html
@@ -162,11 +162,14 @@
                             </v-col>
                             <v-spacer></v-spacer>
                         </v-row>
+                        <v-row>
+                            <v-col md="12">
+                                <v-footer absolute padless>
+                                    <span style="font-style: italic; text-align: center; width: 100%">Made with precision german engineering, calculated hungarian stats & accurate german timings.</span>
+                                </v-footer>
+                            </v-col>
+                        </v-row>
                     </v-container>
-
-                    <v-footer absolute padless>
-                        <span style="font-style: italic; text-align: center; width: 100%">Made with precision german engineering, calculated hungarian stats & accurate german timings.</span>
-                    </v-footer>
                 </v-main>
             </v-app>
         </div>
