bringing back the home button & splitting players onto two lines for records

--- a/html/playerpage.html
+++ b/html/playerpage.html
@@ -26,6 +26,7 @@
                         <v-progress-circular indeterminate color="red"></v-progress-circular>
                         <span> Loading player data...</span>
                     </v-overlay>
+                    <v-btn href="/" icon><v-icon>mdi-arrow-left-circle</v-icon></v-btn>
                     <v-container fluid>
                         <v-row>
                             <v-spacer></v-spacer>
