--- a/html/leaderboards.html
+++ b/html/leaderboards.html
@@ -16,6 +16,7 @@
         <div id="app">
             <v-app>
                 <v-main>
+                    <v-btn href="/" icon><v-icon>mdi-arrow-left-circle</v-icon></v-btn>
                     <v-container fluid>
                         <v-row>
                             <v-spacer></v-spacer>
