--- a/html/leaderboards.html
+++ b/html/leaderboards.html
@@ -129,7 +129,7 @@
                             tag: "MAR"
                         },{
                             name: "Bangkok",
-                            tag: "COL"
+                            tag: "BKK"
                         },{
                             name: "Colorado",
                             tag: "COL"
@@ -158,6 +158,9 @@
                         },{
                             name: "New York",
                             tag: "NY"
+                        },{
+                            name: "Haven Island",
+                            tag: "HAV"
                         },{
                             name: "-- Season 3 --",
                             tag: "S3",
@@ -250,7 +253,7 @@
                                 return 4
                             case "HOK":
                                 return 5
-                            
+
                             // Season 2
                             case "MIA":
                                 return 6
@@ -278,7 +281,7 @@
                                 return 16
                             case "MEN":
                                 return 17
-                            
+
                             default:
                                 return "Unknown"
                         }
