Player names on records page again

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -65,7 +65,8 @@
                             details: [
                                 "Re-added Colorado & Haven to the leaderboards page",
                                 "Fixed some backend stuff",
-                                "Disabled vue dev mode"
+                                "Disabled vue dev mode",
+                                "Player names are correctly listed on records page again"
                             ]
                         }, {
                             title: "v2.0 - The great revamp",
