Added links to frontpage

--- a/html/index.html
+++ b/html/index.html
@@ -68,6 +68,8 @@
             <v-row>
                 <v-spacer></v-spacer>
                 <v-col md="6" align="center">
+                    <a href="https://twitter.com/rrstats" target="_blank" style="font-size: 0.8rem" class="mr-10">RRStats Twitter</a>
+                    <a href="https://discord.gg/f7sc" target="_blank" style="font-size: 0.8rem" class="mr-10">F7SC Discord</a>
                     <a href="/changelog" style="font-size: 0.8rem">Changelog (v{{ version }})</a>
                 </v-col>
                 <v-spacer></v-spacer>
