Record videos now open in a new tab & default leaderboard stat is Winrate

--- a/html/leaderboards.html
+++ b/html/leaderboards.html
@@ -78,7 +78,7 @@
                             text: 'Score',
                             value: 'score'
                         }],
-                        stat: "",
+                        stat: "WR",
                         search: "",
                         statsList: [{
                             name: "Winrate",
@@ -184,6 +184,9 @@
                         stats: [],
                         map: ""
                     }
+                },
+                async created() {
+                  await this.getStat();
                 },
                 methods: {
                     async getStat() {
