--- a/html/changelog.html
+++ b/html/changelog.html
@@ -59,6 +59,20 @@
                 return {
                     changelogEntries: [
                         {
+                            title: "v2.2 - Introducing map forfeits",
+                            subtitle: "Released 10th May 2022",
+                            text: [
+                                "Actually, some of this stuff has been around for a bit. I just never wrote a changelog for it."
+                            ],
+                            details: [
+                                "Added option for maps to be counted as forfeits",
+                                "'0-1' and '1-0' match scores will now be displayed as 'W' and 'L'",
+                                "Winrates now include tied maps as half a win to be consistent with other statistics",
+                                "Default leaderboard statistic is now 'Winrate' and record videos will open in a new tab",
+                                "Minor bugfixes"
+                            ]
+                        },
+                        {
                             title: "v2.1 - The first fixes",
                             subtitle: "Released 23rd January 2022",
                             text: [],
