--- a/html/playerpage.html
+++ b/html/playerpage.html
@@ -246,8 +246,8 @@
                             text: "Played",
                             value: "played"
                         }],
-                        mapWinratesComps: ['RR3', 'RRWC', 'RR4', 'RR5', 'RR6', 'RRWC2021', 'RR7'],
-                        mapPicksComps: ['RR3', 'RRWC', 'RR4', 'RR5', 'RR6', 'RRWC2021', 'RR7'],
+                        mapWinratesComps: ['RR3', 'RRWC', 'RR4', 'RR5', 'RR6', 'RRWC2021', 'RR7', 'RR8'],
+                        mapPicksComps: ['RR3', 'RRWC', 'RR4', 'RR5', 'RR6', 'RRWC2021', 'RR7', 'RR8'],
                         mapWinrates: [],
                         mapPicks: [],
                         winrate: "",
