--- a/html/playerpage.html
+++ b/html/playerpage.html
@@ -222,6 +222,9 @@
                         },{
                             text: 'RR7',
                             value: 'RR7'
+                        },{
+                            text: 'RR8',
+                            value: 'RR8'
                         }],
                         mapPicksHeaders: [{
                             text: 'Map',
